Added style and update head

--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
 <head>
     <meta charset="utf-8">
     <title>Shu Wai's Bio</title>
+    <link rel="icon" href="Favicon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Sacramento&display=swap" rel="stylesheet">
 </head>
+
+<style>
+    body{
+        background-color: #DFF6FF;
+    }
+    hr{
+        border-style: none;
+        border-top-style: dotted;
+        border-color: grey;
+        border-width: 5px;
+    }
+
+    h1{
+        color: #1363DF;
+        font-family: 'Sacramento', serif;
+    }
+
+    h2{
+        color: #6096B4;
+        font-family: 'Karla', sans-serif;
+    }
+</style>
 <body>
     <h1>Shu Wai Woon</h1>
     <p><em>A Chemical Engineering Technology graduate who has great interest in programming.</em></p>
