--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Shu Wai's Bio</title>
-    <link rel="icon" href="Favicon.png">
+    <link rel="icon" href="root/Favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Karla&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
