--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
                     <li>Python</li>
                     <li>HTML</li>
                     <li>Git</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
                 </ul>
             </td>
         </tr>
